// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PointsHistoryContainer View should render PointsHistory container Correctly 1`] = `
<PointsHistory
  className=""
  getPointsHistoryAction={[Function]}
  labels={[Function]}
  pointHistory={[Function]}
  resetStateAction={[Function]}
  router={
    Object {
      "query": Object {
        "id": "addressBook",
      },
    }
  }
  showError=""
  showNotification=""
  showSuccess=""
/>
`;

exports[`PointsHistoryContainer View should render PointsHistoryContainer Correctly 1`] = `
<PointsHistory
  className=""
  getPointsHistoryAction={[Function]}
  labels={[Function]}
  pointHistory={[Function]}
  resetStateAction={[Function]}
  showError=""
  showNotification=""
  showSuccess=""
/>
`;
